[gd_scene load_steps=2 format=2]

[ext_resource path="res://20230419_saveload/DetailedDemo/PlayGround.gd" type="Script" id=2]

[node name="PlayGround" type="Node2D"]
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 31.0
margin_top = 15.0
margin_right = 138.0
margin_bottom = 35.0

[node name="GodotLabel" type="Label" parent="HBoxContainer"]
margin_top = 3.0
margin_right = 50.0
margin_bottom = 17.0
text = "Godots:"

[node name="Add" type="Button" parent="HBoxContainer"]
margin_left = 54.0
margin_right = 74.0
margin_bottom = 20.0
text = "+"

[node name="Minus" type="Button" parent="HBoxContainer"]
margin_left = 78.0
margin_right = 95.0
margin_bottom = 20.0
text = "-"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 99.0
margin_right = 149.0
margin_bottom = 20.0
mouse_filter = 2
custom_constants/margin_right = 50

[node name="Save" type="Button" parent="HBoxContainer"]
margin_left = 153.0
margin_right = 194.0
margin_bottom = 20.0
text = "Save"

[node name="Load" type="Button" parent="HBoxContainer"]
margin_left = 198.0
margin_right = 240.0
margin_bottom = 20.0
text = "Load"

[node name="Clear" type="Button" parent="HBoxContainer"]
margin_left = 244.0
margin_right = 288.0
margin_bottom = 20.0
text = "Clear"

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 793.0
margin_top = 25.0
margin_right = 993.0
margin_bottom = 225.0
rect_min_size = Vector2( 200, 200 )
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 193.0
margin_bottom = 193.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_right = 186.0
margin_bottom = 14.0
mouse_filter = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 94.0
margin_bottom = 14.0
text = "Current Target:"

[node name="Name" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 98.0
margin_right = 116.0
margin_bottom = 14.0
text = "???"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 186.0
margin_bottom = 42.0
mouse_filter = 2

[node name="Label1" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 94.0
margin_bottom = 19.0
text = "Current Target:"

[node name="V1" type="CheckBox" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 98.0
margin_right = 122.0
margin_bottom = 24.0

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 186.0
margin_bottom = 70.0
mouse_filter = 2

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
margin_top = 5.0
margin_right = 94.0
margin_bottom = 19.0
text = "Current Target:"

[node name="LineEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
margin_left = 98.0
margin_right = 156.0
margin_bottom = 24.0
expand_to_text_length = true

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 91, 103, 91, 190, 92, 288, 86, 377, 85, 482, 184, 88, 185, 172, 187, 259, 185, 370, 185, 481, 305, 103, 305, 228, 307, 314, 303, 395, 299, 469, 434, 110, 442, 263, 440, 369, 434, 469, 583, 92, 576, 243, 576, 370, 564, 465, 694, 108, 705, 267, 705, 361, 701, 478 )
default_color = Color( 0.4, 0.501961, 1, 0 )

[connection signal="pressed" from="HBoxContainer/Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="HBoxContainer/Minus" to="." method="_on_Minus_pressed"]
[connection signal="pressed" from="HBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="HBoxContainer/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="HBoxContainer/Clear" to="." method="_on_Clear_pressed"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/HBoxContainer2/V1" to="." method="_on_V1_toggled"]
[connection signal="text_changed" from="PanelContainer/VBoxContainer/HBoxContainer3/LineEdit" to="." method="_on_LineEdit_text_changed"]
